--- a/DriversGalaxy.Infrastructure/CommonStyles/ControlStyles.xaml
+++ b/DriversGalaxy.Infrastructure/CommonStyles/ControlStyles.xaml
@@ -1827,7 +1827,69 @@
 		</Setter>
 	</Style>
 
-	<ControlTemplate x:Key="ComboBoxToggleButton"
+    <Style x:Key="LicenseKeyTextBox"
+		   TargetType="{x:Type TextBoxBase}">
+        <Setter Property="SnapsToDevicePixels"
+				Value="True" />
+        <Setter Property="OverridesDefaultStyle"
+				Value="True" />
+        <Setter Property="KeyboardNavigation.TabNavigation"
+				Value="None" />
+        <Setter Property="FocusVisualStyle"
+				Value="{x:Null}" />
+        <Setter Property="HorizontalAlignment"
+				Value="Left" />
+        <Setter Property="VerticalAlignment"
+				Value="Top" />
+        <Setter Property="Foreground"
+				Value="{StaticResource ElementColor}" />
+        <Setter Property="FontFamily"
+				Value="/DriversGalaxy.Infrastructure;component/Fonts/#Helvetica Neue CE 55" />
+        <Setter Property="FontSize"
+				Value="18" />
+        <Setter Property="FontWeight"
+                Value="SemiBold"/>
+        <Setter Property="Height"
+				Value="40" />
+        <Setter Property="Width"
+				Value="460" />
+        <Setter Property="Margin"
+				Value="0,0,0,0" />
+        <Setter Property="BorderThickness"
+				Value="1" />
+        <Setter Property="AllowDrop"
+				Value="true" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBoxBase}">
+                    <Border Name="Border"
+							CornerRadius="4"
+							Padding="5,7,4,0"
+							Background="#000000"
+							BorderBrush="{StaticResource ElementBorder}"
+							BorderThickness="1">
+                        <ScrollViewer Margin="0"
+									  x:Name="PART_ContentHost" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled"
+								 Value="False">
+                            <Setter TargetName="Border"
+									Property="Background"
+									Value="{StaticResource DisabledBackgroundBrush}" />
+                            <Setter TargetName="Border"
+									Property="BorderBrush"
+									Value="{StaticResource DisabledBackgroundBrush}" />
+                            <Setter Property="Foreground"
+									Value="{StaticResource DisabledForegroundBrush}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+        
+    <ControlTemplate x:Key="ComboBoxToggleButton"
 					 TargetType="ToggleButton">
 		<Grid>
 			<Grid.ColumnDefinitions>
@@ -2862,7 +2924,7 @@
 			</Setter.Value>
 		</Setter>
 		<Setter Property="Border.BorderBrush"
-				Value="#FFC0C0C0" />
+				Value="#000000" />
 		<Setter Property="Border.BorderThickness"
 				Value="1.2" />
 		<Setter Property="FrameworkElement.Width"
