--- a/DriversGalaxy/Views/PanelLicenseKeyEnter.xaml
+++ b/DriversGalaxy/Views/PanelLicenseKeyEnter.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DriversGalaxy.Views.PanelPaymentNeeded"
+﻿<UserControl x:Class="DriversGalaxy.Views.PanelLicenseKeyEnter"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,7 +9,7 @@
              xmlns:my="clr-namespace:PopUpUtils;assembly=DriversGalaxy.Infrastructure"
 			 mc:Ignorable="d"
 			 d:DesignHeight="293"
-			 d:DesignWidth="645"
+			 d:DesignWidth="645"             
 			 Height="576"
 			 Width="700"
              Background="{StaticResource MainAreaBackGround}">
@@ -23,8 +23,7 @@
             <RowDefinition Height="15" />
             <RowDefinition Height="173" />
             <RowDefinition Height="15" />
-			<RowDefinition Height="58" />
-            <RowDefinition Height="61" />
+			<RowDefinition Height="58" />            
 		</Grid.RowDefinitions>
         <Border Grid.Row="0"
                 Margin="0,19,0,0"
@@ -76,7 +75,7 @@
             </Border>
         </Border>
         <Border Grid.Row="2" Style="{StaticResource CustomCheckBoxWrapBig}" Height="173" Width="642"
-                TextBlock.FontFamily="/DriversGalaxy.Infrastructure;component/Fonts/#Helvetica CE 55">
+                TextBlock.FontFamily="/DriversGalaxy.Infrastructure;component/Fonts/#Helvetica CE 55">            
             <Grid Grid.Row ="2"
               Margin="0,0,0,0"
               Width="645"
@@ -126,37 +125,24 @@
 				Margin="0"
                 Grid.ColumnSpan="2">
 				<Grid>
-					<Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="48" />
-                    <ColumnDefinition Width="300" />
-                    <ColumnDefinition Width="294" />
-                </Grid.ColumnDefinitions>
-                    <Image Style="{StaticResource FunctionalButtonImage}"
-					   Margin="10,6,0,0"
-					   Source="../Images/icon-lamp.png" />
-                <Grid Grid.Column="1"
-					  VerticalAlignment="Top">
-                    <TextBlock Style="{StaticResource BottomPanelTitle}"
-							   Text="{lex:LocText DriversGalaxy:Resources:UpgradeFooter}"></TextBlock>
-                    <TextBlock Style="{StaticResource BottomPanelText}"
-							   Text="{lex:LocText DriversGalaxy:Resources:UpgradeFooterText}"></TextBlock>
+					<Grid.ColumnDefinitions>                    
+                    <ColumnDefinition Width="480" />
+                    <ColumnDefinition Width="162" />
+                </Grid.ColumnDefinitions>                    
+                <Grid Grid.Column="0" VerticalAlignment="Top">                                       
+                    <TextBox Margin="9,9,0,0"
+                             Name="LicenseKey"
+                             Style="{StaticResource LicenseKeyTextBox}">                        
+                    </TextBox>                    
                 </Grid>
                 <Button Style="{StaticResource GreenRoundedButton}"
-							Grid.Column="3"
-							Width="285"
-							Command="{Binding SubscribeCommand}"
-							Content="{lex:LocText DriversGalaxy:Resources:Subscribe}"
+							Grid.Column="1"							
+							Command="{Binding VerifyLicenseKeyCommand}"
+							Content="{lex:LocText DriversGalaxy:Resources:Ok}"
                             Margin="3,3,0,0"
+                            Width="149"
                             />              
 				</Grid>			
-		</Border>
-        <Border Grid.Row="5" Background="Transparent">
-            <Button Style="{StaticResource TransparentButton}" Margin="0,10,0,0"
-                    Command="{Binding EnterLicenseKeyCommand}"
-                    Content="{lex:LocText DriversGalaxy:Resources:AlreadyHaveKey}"
-                    HorizontalAlignment="Center"                    
-                    Foreground="#b3b3b3">
-            </Button>            
-        </Border>
+		</Border>        
     </Grid>
 </UserControl>
