--- a/DriversGalaxy/Views/PanelRestoreTargetsSelection.xaml
+++ b/DriversGalaxy/Views/PanelRestoreTargetsSelection.xaml
@@ -64,7 +64,8 @@
 													   Stretch="None"
 													   HorizontalAlignment="Left"
 													   Source="{Binding DeviceClassImageSmall}" />
-												<TextBlock Text="{Binding DeviceClassName}" />
+												<TextBlock Text="{Binding DeviceClassName}" 
+                                                           Foreground="#878787"/>
 											</StackPanel>
 										</CheckBox>
 
@@ -88,7 +89,8 @@
 																   HorizontalAlignment="Left"
 																   Source="{Binding DeviceClassImageSmall}" />
 															<TextBlock Grid.Column="2"
-																	   Text="{Binding DeviceName}" />
+																	   Text="{Binding DeviceName}" 
+                                                                       Foreground="#878787"/>
 														</StackPanel>
 													</CheckBox>
 
