--- a/DriversGalaxy.OSMigrationTool.Backup/Themes/Blue/Theme.xaml
+++ b/DriversGalaxy.OSMigrationTool.Backup/Themes/Blue/Theme.xaml
@@ -20,9 +20,9 @@
 	</LinearGradientBrush>
 	<LinearGradientBrush x:Key="TitlePanelsBackgroundColor" EndPoint="0.5,1"
 						 StartPoint="0.5,0">
-		<GradientStop Color="#FF009AB7"
+        <GradientStop Color="#3e3e3e"
 					  Offset="0" />
-		<GradientStop Color="#FF0085A7"
+        <GradientStop Color="#3d3d3d"
 					  Offset="1" />
 	</LinearGradientBrush>
 </ResourceDictionary>
