--- a/DriversGalaxy.OSMigrationTool.Backup/Views/PanelScanFinished.xaml
+++ b/DriversGalaxy.OSMigrationTool.Backup/Views/PanelScanFinished.xaml
@@ -255,7 +255,7 @@
 					</StackPanel>
 				</StackPanel>
 
-				<Button Style="{StaticResource BlueRoundedButton}"
+				<Button Style="{StaticResource GreenRoundedButton}"
 						Grid.Column="2"
 						Width="149"
 						Command="{Binding CloseCommand}"
