--- a/DriversGalaxy/Views/OSMigrationToolPopup.xaml
+++ b/DriversGalaxy/Views/OSMigrationToolPopup.xaml
@@ -9,11 +9,12 @@
 		Height="445"
 		Width="500"
 		Style="{StaticResource BaseWindowStyle}"
+        Background="#000000"
 		ShowInTaskbar="False">
 	<Border CornerRadius="5"
 			Padding="10">
 		<Border CornerRadius="5"
-				BorderBrush="#D8E1E3"
+				BorderBrush="#000000"
 				BorderThickness="1"
 				Padding="16 10 16 19">
 			<Border.Effect>
@@ -26,9 +27,9 @@
 			<Border.Background>
 				<LinearGradientBrush EndPoint="0.5,1"
 									 StartPoint="0.5,0">
-					<GradientStop Color="#F7FCFC"
+					<GradientStop Color="#3d3d3d"
 								  Offset="0" />
-					<GradientStop Color="#DEE7E7"
+					<GradientStop Color="#0d0d0d"
 								  Offset="1" />
 				</LinearGradientBrush>
 			</Border.Background>
@@ -58,15 +59,15 @@
 				<Border Name="Inner"
 						Grid.Row="1"
 						CornerRadius="5"
-						BorderBrush="#D8E1E3"
+						BorderBrush="#3d3d3d"
 						BorderThickness="1"
 						Padding="25 10 25 12">
 					<Border.Background>
 						<LinearGradientBrush EndPoint="0.5,1"
 											 StartPoint="0.5,0">
-							<GradientStop Color="#E5F0F2"
+							<GradientStop Color="#3d3d3d"
 										  Offset="0" />
-							<GradientStop Color="#FFFFFF"
+							<GradientStop Color="#3e3e3e"
 										  Offset="1" />
 						</LinearGradientBrush>
 					</Border.Background>
@@ -101,7 +102,7 @@
 						<Button Style="{StaticResource GreenRoundedButton}"
 								Width="350"
 								Height="40"
-								Padding="0 5 0 0"
+								Padding="0 9 0 0"
 								Click="RunOSMigrationTool"
 								Content="{lex:LocText DriversGalaxy:Resources:RunOSMigrationTool}"
 								HorizontalAlignment="Right"
@@ -155,7 +156,7 @@
 								Style="{StaticResource GreenRoundedButton}"
 								Width="250"
 								Height="40"
-								Padding="0 5 0 0"
+								Padding="0 9 0 0"
 								Click="RunOSMigrationRestoreTool"
 								Content="{lex:LocText DriversGalaxy:Resources:RunOSMigrationRestoreTool}"
 								Grid.ColumnSpan="2"
