--- a/DriversGalaxy.Infrastructure/CommonStyles/ControlStyles.xaml
+++ b/DriversGalaxy.Infrastructure/CommonStyles/ControlStyles.xaml
@@ -38,9 +38,9 @@
     <LinearGradientBrush x:Key="ScanForIssueInnerBorder"
 						 EndPoint="0.5,1"
 						 StartPoint="0.5,0">
-        <GradientStop Color="#249445"
+        <GradientStop Color="#50a96a"
 					  Offset="0" />
-        <GradientStop Color="#249445"
+        <GradientStop Color="#50a96a"
 					  Offset=".4" />
 	</LinearGradientBrush>
     
@@ -341,7 +341,7 @@
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type Button}">
 					<Border Margin="{TemplateBinding FrameworkElement.Margin}"
-							Background="{TemplateBinding Panel.Background}"
+							Background="{TemplateBinding Panel.Background}"                            
 							BorderBrush="{TemplateBinding Border.BorderBrush}"
 							BorderThickness="{TemplateBinding Border.BorderThickness}"
 							CornerRadius="20"
@@ -354,13 +354,7 @@
 											  TextElement.FontSize="{TemplateBinding TextElement.FontSize}"
 											  Margin="{TemplateBinding Control.Padding}"
 											  HorizontalAlignment="{TemplateBinding Control.HorizontalContentAlignment}"
-											  VerticalAlignment="{TemplateBinding Control.VerticalContentAlignment}">
-								<ContentPresenter.Effect>
-									<DropShadowEffect BlurRadius="1"
-													  Direction="90"
-													  Color="#59956a"
-													  ShadowDepth="1" />
-								</ContentPresenter.Effect>
+											  VerticalAlignment="{TemplateBinding Control.VerticalContentAlignment}">								
 							</ContentPresenter>
 						</Border>
 					</Border>
@@ -1303,7 +1297,7 @@
 						<Trigger Property="ComboBoxItem.IsHighlighted"
 								 Value="True">
 							<Setter Property="Panel.Background"
-									Value="{StaticResource MainAreaBackGround}" />
+									Value="{StaticResource MainAreaBackGround}"  />
 						</Trigger>
 						<Trigger Property="UIElement.IsEnabled"
 								 Value="False">
@@ -1316,7 +1310,40 @@
 		</Setter>
 	</Style>
 
-	<Style x:Key="DownArrowButton"
+    <Style x:Key="UpperComboBoxItem"
+		   TargetType="{x:Type ComboBoxItem}">        
+        <Setter Property="Control.Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ComboBoxItem}">                    
+                    <Border SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}"
+							Margin="{TemplateBinding FrameworkElement.Margin}"
+							Padding="{TemplateBinding Control.Padding}"
+							Background="{TemplateBinding Panel.Background}"
+							BorderThickness="{TemplateBinding Border.BorderThickness}"
+							CornerRadius="3">
+                        <Label Foreground="#b3b3b3" Name="ContentLabel">                                                   
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding Control.HorizontalContentAlignment}"
+										  VerticalAlignment="{TemplateBinding Control.VerticalContentAlignment}" />                    
+			            </Label>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="ComboBoxItem.IsHighlighted"
+								 Value="True">
+                            <Setter Property="Panel.Background"
+									Value="#FFFFFF"  />
+                        </Trigger>
+                        <Trigger Property="UIElement.IsEnabled"
+								 Value="False">
+                            <Setter Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"
+									Property="TextElement.Foreground" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <Style x:Key="DownArrowButton"
 		   TargetType="{x:Type ToggleButton}">
 		<Setter Property="FrameworkElement.OverridesDefaultStyle"
 				Value="True" />
@@ -2121,15 +2148,7 @@
 		<Setter Property="FontSize"
 				Value="14.9" />
 		<Setter Property="VerticalAlignment"
-				Value="Top" />
-		<Setter Property="Effect">
-			<Setter.Value>
-				<DropShadowEffect BlurRadius="1"
-								  Direction="-90"
-								  Color="#b3b3b3"
-								  ShadowDepth="1" />
-			</Setter.Value>
-		</Setter>
+				Value="Top" />		
 	</Style>
 
 	<Style x:Key="BottomPanelText"
@@ -2143,15 +2162,7 @@
 		<Setter Property="FontFamily"
 				Value="/DriversGalaxy.Infrastructure;component/Fonts/#Helvetica Neue CE 55" />
 		<Setter Property="VerticalAlignment"
-				Value="Top" />
-		<Setter Property="Effect">
-			<Setter.Value>
-				<DropShadowEffect BlurRadius="1"
-								  Direction="-90"
-								  Color="#b3b3b3"
-								  ShadowDepth="1" />
-			</Setter.Value>
-		</Setter>
+				Value="Top" />		
 	</Style>
 
 	<Style x:Key="RadioButtonText"
@@ -2739,20 +2750,13 @@
 
 			<Rectangle RadiusX="5"
 					   RadiusY="5"
-					   Fill="#FFF5F6F7">
-				<Rectangle.Effect>
-					<DropShadowEffect BlurRadius="1"
-									  Direction="-90"
-									  ShadowDepth="1"
-									  Opacity=".3"
-									  Color="#FFEFF0F0" />
-				</Rectangle.Effect>
+					   Fill="#3e3e3e">
 				<Rectangle.Stroke>
 					<LinearGradientBrush EndPoint="0.5,1"
 										 StartPoint="0.5,0">
-						<GradientStop Color="#FFDCDEDE"
+                        <GradientStop Color="#000000"
 									  Offset="0" />
-						<GradientStop Color="#FFB9B9B9"
+                        <GradientStop Color="#000000"
 									  Offset="1" />
 					</LinearGradientBrush>
 				</Rectangle.Stroke>
@@ -2760,13 +2764,13 @@
 
 			<TextBlock TextWrapping="Wrap"
 					   FontWeight="Bold"
-					   Foreground="#FF4E4E4E"
+					   Foreground="#878787"
 					   FontFamily="Arial">
 				<Border BorderThickness="0,1,0,0"
 						Margin="1"
 						Padding="11 10 11 11"
 						CornerRadius="5"
-						BorderBrush="White">
+						BorderBrush="#000000">
 					<TextBlock Text="{TemplateBinding ContentControl.Content}" />
 				</Border>
 			</TextBlock>
