--- a/DriversGalaxy.OSMigrationTool.Backup/Views/PanelScan.xaml
+++ b/DriversGalaxy.OSMigrationTool.Backup/Views/PanelScan.xaml
@@ -35,7 +35,7 @@
 						<TextBlock Padding="19 11 0 0"
 								   FontSize="18.39"
 								   FontFamily="/DriversGalaxy.Infrastructure;component/Fonts/#Helvetica Neue CE 75"
-								   Foreground="#000000"
+								   Foreground="#FFFFFF"
 								   FontWeight="Bold">Scan your system</TextBlock>
 					</Border>
 					<Grid HorizontalAlignment="Stretch"
