--- a/DriversGalaxy.OSMigrationTool.Restore/MainWindow.xaml
+++ b/DriversGalaxy.OSMigrationTool.Restore/MainWindow.xaml
@@ -56,7 +56,8 @@
 								   Margin="8,10,10,0"
 								   HorizontalAlignment="Right"
 								   DockPanel.Dock="Right">
-							<Button Style="{StaticResource HelpButton}"
+                            <Button Style="{StaticResource HelpButton}"
+                                    Click="OpenAboutBox"
 									FontFamily="/DriversGalaxy.Infrastructure;component/Fonts/#Helvetica Neue CE 55">
 								<TextBlock Text="i"
 										   FontFamily="Segoe UI"
@@ -64,7 +65,7 @@
 										   FontWeight="Bold" />
 								<Button.ToolTip>
 									<ToolTip Style="{x:Null}"
-											 Content="{lex:LocText DriversGalaxy.OSMigrationTool.Restore:Resources:Help}" />
+											 Content="{lex:LocText DriversGalaxy.OSMigrationTool.Restore:Resources:About}" />
 								</Button.ToolTip>
 							</Button>
 							<Button Style="{StaticResource MinimizeButton}"
