--- a/DriversGalaxy.OSMigrationTool.Backup/Themes/Blue/Theme.xaml
+++ b/DriversGalaxy.OSMigrationTool.Backup/Themes/Blue/Theme.xaml
@@ -13,9 +13,9 @@
 	<LinearGradientBrush x:Key="MouseOverColor"
 							StartPoint="0.5,0"
 							EndPoint="0.5,1">
-		<GradientStop Color="#0AA0BE"
+        <GradientStop Color="#515151"
 						Offset="0" />
-		<GradientStop Color="LightBlue"
+		<GradientStop Color="#3d3d3d"
 						Offset="1" />
 	</LinearGradientBrush>
 	<LinearGradientBrush x:Key="TitlePanelsBackgroundColor" EndPoint="0.5,1"
